--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,6 +89,7 @@
 }
 
 .card {
+  font-family: 'Julius Sans One', sans-serif;
   width: 100%;
   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
 }
@@ -186,3 +187,6 @@ ul.menu.menu-desktop {
   font-family: 'Julius Sans One', sans-serif;
 }
 
+.card-divider {
+  background-color: #fff
+}
