--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -166,7 +166,8 @@ ul.menu.menu-desktop {
 }
 
 .card-divider {
-  background-color: #fff
+  background-color: #fff;
+}
 
 .button.inc {
   background-color: #23c1a0;
