--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{ :lang => "en" }
   %head
 
-    %link{:href => "https://fonts.googleapis.com/css?family=Julius+Sans+One", :rel => "stylesheet"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Julius+Sans+One|Open+Sans+Condensed:300", :rel => "stylesheet"}/
 
     %meta{ :charset => "utf-8" }
 
