--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -4,12 +4,12 @@
       .large-4.medium-4.columns
         .card
           .newh
-            = link_to facility.name, facility_path(facility.id)
+            = facility.name
         = facility.description
         %br
         %br
-        = link_to "Mange time slots", facility_path(facility.id), class: 'button tiny inc'
-        = link_to 'Mange bookings', facility_bookings_path(facility.id), class: 'button tiny inc'
+        = link_to "Manage timeslots", facility_path(facility.id), class: 'button tiny inc'
+        = link_to 'Manage bookings', facility_bookings_path(facility.id), class: 'button tiny inc'
         = link_to "Delete", "/facilities/#{facility.id}", method: :delete, class: 'button tiny alert'
   %br
   = link_to 'New Facility', new_facility_path, class: 'button inc'
