--- a/app/views/help_requests/index.html.haml
+++ b/app/views/help_requests/index.html.haml
@@ -5,7 +5,7 @@
       .large-4.medium-4.columns
         .card
           .newh
-            = link_to help.title, new_workorder_path(help.id)
+            = help.title
         = help.message
         %br
         %br
