more minor fixes

--- a/app/views/facilities/show.html.haml
+++ b/app/views/facilities/show.html.haml
@@ -1,22 +1,25 @@
 .base
-  Scheduling control for
-  = @facility.name
-  - if @facility.timeslots[0].nil?
-    = form_tag facility_timeslots_path(@facility), {method: :post} do
-      = label_tag 'Start time'
-      = select_tag 'start_time', options_for_select(Facility.start_time)
-      = label_tag 'Number of time slot'
-      = select_tag 'time_slot', options_for_select(Facility.time_slot)
-      = label_tag 'Number of hours'
-      = select_tag 'hours', options_for_select(Facility.hours)
-      = submit_tag "Set schedule", class: 'round button'
-  - else
-    current schedule
+  %h4 Scheduling control for
+  %h4
+    = @facility.name
     %br
-
-    - @facility.timeslots.order(:created_at).each do |timeslot|
-      = timeslot.start_time
-      -
-      = timeslot.end_time
+    %br
+    - if @facility.timeslots[0].nil?
+      = form_tag facility_timeslots_path(@facility), {method: :post} do
+        = label_tag 'Start time'
+        = select_tag 'start_time', options_for_select(Facility.start_time)
+        = label_tag 'Number of time slot'
+        = select_tag 'time_slot', options_for_select(Facility.time_slot)
+        = label_tag 'Number of hours'
+        = select_tag 'hours', options_for_select(Facility.hours)
+        = submit_tag "Set schedule", class: 'round button', class: 'button inc'
+    - else
+      current schedule
       %br
-    = link_to "Update timeslots", facility_timeslot_path(params[:id], 3), method: :delete, class: 'button inc'
+
+      - @facility.timeslots.order(:created_at).each do |timeslot|
+        = timeslot.start_time
+        -
+        = timeslot.end_time
+        %br
+      = link_to "Update timeslots", facility_timeslot_path(params[:id], 3), method: :delete, class: 'button inc'
