--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -13,4 +13,5 @@
         = link_to 'Manage bookings', facility_bookings_path(facility.id), class: 'button tiny inc'
         = link_to "Delete", "/facilities/#{facility.id}", method: :delete, class: 'button tiny alert'
   %br
-  = link_to 'New Facility', new_facility_path, class: 'button inc'
+  .nisse
+    = link_to 'New Facility', new_facility_path, class: 'button inc'
