--- a/app/views/buildings/show.html.haml
+++ b/app/views/buildings/show.html.haml
@@ -1,3 +1,3 @@
 - @building.each do |building|
- =link_to building.name
+ =link_to building.name, controller: "buildings", action: "show", id2: building.id
  %br/
