--- a/app/views/workorders/index.html.haml
+++ b/app/views/workorders/index.html.haml
@@ -15,7 +15,7 @@
         = work.location
         %br
         %br
-        = form_tag workorder_path(work.id), {method: :patch} do
+        = form_tag building_workorder_path(@building, work.id), {method: :patch} do
           = label_tag 'Set status'
           = select_tag :status, options_for_select(['In progress','Unable to complete','Done'], selected: work.status)
           = submit_tag "Update status", class: 'button inc'
