--- a/app/views/workorders/new.html.haml
+++ b/app/views/workorders/new.html.haml
@@ -21,7 +21,7 @@
       .actions
         = f.submit "Send", class: 'button inc'
   - else
-    = form_for @workorder, url: workorders_path(help_request_id: @help_request.id),method: 'post' do |f|
+    = form_for @workorder, url: building_workorders_path(@building,help_request_id: @help_request.id),method: 'post' do |f|
       .field
         = f.label :title
         %br/
