--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
               %li
                 = link_to 'Help requests', building_help_requests_path(session[:current_building_id])
               %li
-                = link_to 'Facilities', facilities_path
+                = link_to 'Facilities', building_facilities_path(session[:current_building_id])
               %li
                 = link_to 'News', new_building_news_path(session[:current_building_id])
               %li
