--- a/app/views/bookings/show.html.haml
+++ b/app/views/bookings/show.html.haml
@@ -7,6 +7,6 @@
   %b Start time:
   = @booking.start_time
 
-= link_to 'Edit', edit_facility_booking_path(@facility, @booking), class: 'button inc'
+= link_to 'Edit', edit_building_facility_booking_path(@building, @facility, @booking), class: 'button inc'
 \|
-= link_to 'Back', facility_bookings_path(@facility), class: 'button inc'
+= link_to 'Back', building_facility_bookings_path(@building,@facility), class: 'button inc'
