add cucumber test and fix for index and show routes

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,7 +12,7 @@
     .field
       = f.label :role
       %br/
-      = f.select :role, ['admin', 'janitor']
+      = f.select :role, ['admin']
     .field
       = f.label :password
       - if @minimum_password_length
