--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -10,7 +10,7 @@
           = news.description
           %br
           %br
-            = link_to "Update", "/news/#{news.id}/edit", method: :get, class: 'button tiny inc'
-            = link_to "Delete", "/news/#{news.id})", method: :delete, class: 'button tiny alert'
+            = link_to "Update", "/buildings/#{session[:current_building_id]}/news/#{news.id}/edit", method: :get, class: 'button tiny inc'
+            = link_to "Delete", "/buildings/#{session[:current_building_id]}/news/#{news.id})", method: :delete, class: 'button tiny alert'
 .nisse
-  = link_to "Create news", new_news_path(@news), class: 'button inc'
+  = link_to "Create news", new_building_news_path(session[:current_building_id]), class: 'button inc'
