--- a/app/views/user/new.html.haml
+++ b/app/views/user/new.html.haml
@@ -1,5 +1,5 @@
 .base
-  %h4 Sign up
+  %h4 Add user
   %br/
   = form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|
     .field
@@ -23,3 +23,6 @@
       = f.hidden_field :password_confirmation, autocomplete: "off", value: @code
     .actions
       = f.submit "Sign up", class: 'button inc'
+      %br/
+      %br/
+      = link_to 'Mange users', user_index_path, class: 'button inc'
