visible password for demo

--- a/app/views/user/new.html.haml
+++ b/app/views/user/new.html.haml
@@ -1,5 +1,6 @@
 .base
   %h4 Add user
+  = @code
   %br/
   = form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|
     .field
