--- a/app/views/user/new.html.haml
+++ b/app/views/user/new.html.haml
@@ -4,6 +4,14 @@
   %br/
   = form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|
     .field
+      = f.label :first_name
+      %br/
+      = f.text_field :first_name
+    .field
+      = f.label :last_name
+      %br/
+      = f.text_area :last_name
+    .field
       = f.label :email
       %br/
       = f.email_field :email, autofocus: true
