add name to help_request

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -22,6 +22,8 @@
             - if help.urgent == true
               .stat_red
             = help.title
+            %br
+            = help.name
             %hr/
             %p.help
               = help.message
