--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -10,9 +10,8 @@
         .card
           .newh
             = news.title
-        %p
+        .content{:style => "overflow-y:scroll; overflow-x:hidden; height:100px;"}
           = news.description
-          %br
-          %br
-            = link_to "Update", "/buildings/#{session[:current_building_id]}/news/#{news.id}/edit", method: :get, class: 'button tiny inc'
-            = link_to "Delete", "/buildings/#{session[:current_building_id]}/news/#{news.id})", method: :delete, class: 'button tiny alert'
+        %br
+        = link_to "Update", "/buildings/#{session[:current_building_id]}/news/#{news.id}/edit", method: :get, class: 'button tiny inc'
+        = link_to "Delete", "/buildings/#{session[:current_building_id]}/news/#{news.id})", method: :delete, class: 'button tiny alert'
