add dynamic booking check

--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -14,5 +14,6 @@
         %br
         %br
         = link_to "Manage timeslots", building_facility_path(@building, facility.id), class: 'button tiny inc'
+        = link_to "Manage facility", edit_building_facility_path(@building, facility.id), class: 'button tiny inc'
         = link_to 'Manage bookings', building_facility_bookings_path(@building,facility.id), class: 'button tiny inc'
         = link_to "Delete", "/buildings/#{session[:current_building_id]}/facilities/#{facility.id}", method: :delete, class: 'button tiny alert'
