send password with an email to users

--- a/app/views/user_mailer/welcome_email.html.haml
+++ b/app/views/user_mailer/welcome_email.html.haml
@@ -7,8 +7,7 @@
       Welcome to BuildingBlockz, #{@user.first_name}
     %p
       You have successfully signed up to Buildingblockz,
-      your username is: #{@user.last_name}.
       %br/
-    %p
-      To login to the site, just follow this link: #{@url}.
+      your password is: #{@user.password}.
+      %br/
     %p Thanks for joining and have a great day!
